feat: add backend key data

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 getset = "0.1.2"
+derive-new = "0.5"
 #tokio-util = { version = "0.7.3", features = ["codec"] }
 bytes = "1.1.0"
 time = "0.3"
