--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,14 @@ edition = "2021"
 
 [dependencies]
 getset = "0.1.2"
+tokio-util = { version = "0.7.3", features = ["codec", "io"] }
 derive-new = "0.5"
-#tokio-util = { version = "0.7.3", features = ["codec"] }
 bytes = "1.1.0"
 time = "0.3"
+
+
+[dev-dependencies]
+tokio = { version = "1.19", features = ["rt-multi-thread", "net", "io-util", "macros"]}
+tokio-stream = "0.1"
+futures = "0.3"
+rand = "0.8"
