--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ time = "0.3"
 futures = "0.3"
 async-trait = "0.1"
 rand = "0.8"
+tokio = { version = "1.19", features = ["net"] }
 
 [dev-dependencies]
 tokio = { version = "1.19", features = ["rt-multi-thread", "net", "io-util", "macros"]}
-tokio-stream = "0.1"
