--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
 [dev-dependencies]
 tokio = { version = "1.19", features = ["rt-multi-thread", "net", "io-util", "macros"]}
 rusqlite = { version = "0.28.0", features = ["bundled"] }
+hex = "0.4"
 
 [features]
 default = ["tokio_support"]
