--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "pgwire"
 version = "0.1.0"
 edition = "2021"
+authors = ["Ning Sun <sunng@pm.me>"]
+license = "MIT"
+description = "Postgresql wire protocol implemented as a library"
+keywords = ["database", "postgresql"]
+categories = ["database"]
+homepage = "https://github.com/sunng87/pgwire"
+repository = "https://github.com/sunng87/pgwire"
+documentation = "https://docs.rs/crate/pgwire/"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
