--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "pgwire"
 version = "0.3.0"
 edition = "2021"
 authors = ["Ning Sun <sunng@pm.me>"]
-license = "MIT"
+license = "MIT/Apache-2.0"
 description = "Postgresql wire protocol implemented as a library"
 keywords = ["database", "postgresql"]
 categories = ["database"]
@@ -11,8 +11,6 @@ homepage = "https://github.com/sunng87/pgwire"
 repository = "https://github.com/sunng87/pgwire"
 documentation = "https://docs.rs/crate/pgwire/"
 readme = "README.md"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = "0.4"
