--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,11 @@ postgres-types = "0.2"
 
 tokio = { version = "1.19", features = ["net", "rt"], optional = true}
 tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
+tokio-rustls = { version = "0.23", optional = true }
+## for loading custom cert files
+rustls-pemfile = { version = "1.0", optional = true }
+## webpki-roots has mozilla's set of roots
+## rustls-native-certs loads roots from current system
 
 [dev-dependencies]
 tokio = { version = "1.19", features = ["rt-multi-thread", "net", "io-util", "macros"]}
@@ -34,7 +39,7 @@ hex = "0.4"
 
 [features]
 default = ["tokio_support"]
-tokio_support = ["tokio", "tokio-util"]
+tokio_support = ["tokio", "tokio-util", "tokio-rustls", "rustls-pemfile"]
 
 [[example]]
 name = "server"
