--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ rand = "0.8"
 thiserror = "1"
 postgres-types = "0.2"
 
-tokio = { version = "1.19", features = ["net", "rt"], optional = true}
+tokio = { version = "1.19", features = ["net", "rt", "io-util"], optional = true}
 tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
 tokio-rustls = { version = "0.23", optional = true }
 ## for loading custom cert files
@@ -33,7 +33,7 @@ rustls-pemfile = { version = "1.0", optional = true }
 ## rustls-native-certs loads roots from current system
 
 [dev-dependencies]
-tokio = { version = "1.19", features = ["rt-multi-thread", "net", "io-util", "macros"]}
+tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros"]}
 rusqlite = { version = "0.28.0", features = ["bundled", "column_decltype"] }
 hex = "0.4"
 
