--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rand = "0.8"
 thiserror = "1"
 postgres-types = "0.2"
 md5 = "0.7"
+base64 = "0.20"
 
 tokio = { version = "1.19", features = ["net", "rt", "io-util", "time"], optional = true}
 tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
