--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,11 @@ rand = "0.8"
 thiserror = "1"
 postgres-types = "0.2"
 md5 = "0.7"
+## scram libraries
 base64 = "0.20"
+pbkdf2 = "0.11.0"
+hmac = "0.12.1"
+sha2 = "0.10.6"
 
 tokio = { version = "1.19", features = ["net", "rt", "io-util", "time"], optional = true}
 tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
