--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,7 @@ postgres-types = "0.2"
 md5 = "0.7"
 ## scram libraries
 base64 = "0.21"
-pbkdf2 = "0.11.0"
-hmac = "0.12.1"
-sha2 = "0.10.6"
+ring = "0.16"
 stringprep = "0.1.2"
 
 tokio = { version = "1.19", features = ["net", "rt", "io-util"], optional = true}
