--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,23 +37,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [stable, beta, nightly, macos, windows]
+        build: [stable, nightly]
         include:
           - build: stable
             os: ubuntu-latest
             rust: stable
-          - build: beta
-            os: ubuntu-latest
-            rust: beta
           - build: nightly
             os: ubuntu-latest
             rust: nightly
-          - build: macos
-            os: macos-latest
-            rust: stable
-          - build: windows
-            os: windows-latest
-            rust: stable
     steps:
     - uses: actions/checkout@v3
     - uses: actions-rs/toolchain@v1
@@ -64,6 +55,7 @@ jobs:
       run: cargo test --all-features
 
   integration:
+    name: Integration tests
     runs-on: ubuntu-latest
     timeout-minutes: 15
     needs: [test]
@@ -87,4 +79,4 @@ jobs:
       with:
         toolchain: "1.63"
         override: true
-    - run: cargo build --all-features
+    - run: cargo test --all-features
