--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,9 @@ jobs:
     - run: |
         pip install psycopg
         pip install psycopg2
+    - uses: turtlequeue/setup-babashka@v1.5.0
+      with:
+        babashka-version: 1.1.173
     - run: ./tests-integration/test.sh
 
   msrv:
