ci: do not run test on msrv

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,4 +82,4 @@ jobs:
       with:
         toolchain: "1.65"
         override: true
-    - run: cargo test --all-features
+    - run: cargo build --all-features
