--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ chrono = { version = "0.4", optional = true, features = ["std"] }
 tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros"]}
 rusqlite = { version = "0.30.0", features = ["bundled", "column_decltype"] }
 ## for loading custom cert files
-rustls-pemfile = { version = "1.0" }
+rustls-pemfile = "2.0"
 ## webpki-roots has mozilla's set of roots
 ## rustls-native-certs loads roots from current system
 gluesql = "0.13"
