--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ gluesql = "0.13"
 ## for datafusion example
 datafusion = "33"
 sqlparser = "0.40"
+## for proxy example
+tokio-postgres = "0.7"
 
 [features]
 default = ["tokio", "time-format"]
