--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ x509-certificate = "0.23"
 
 tokio = { version = "1.19", features = ["net", "rt", "io-util"], optional = true}
 tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
-tokio-rustls = { version = "0.24", optional = true }
+tokio-rustls = { version = "0.25", optional = true }
 
 chrono = { version = "0.4", optional = true, features = ["std"] }
 
@@ -43,6 +43,7 @@ tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros"]}
 rusqlite = { version = "0.30.0", features = ["bundled", "column_decltype"] }
 ## for loading custom cert files
 rustls-pemfile = "2.0"
+rustls-pki-types = "1.0"
 ## webpki-roots has mozilla's set of roots
 ## rustls-native-certs loads roots from current system
 gluesql = "0.13"
