--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,9 @@ chrono = { version = "0.4", optional = true, features = ["std"] }
 [dev-dependencies]
 tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros"]}
 rusqlite = { version = "0.31.0", features = ["bundled", "column_decltype"] }
+## for duckdb example
+duckdb = { version = "0.9.2", features = ["bundled"] }
+
 ## for loading custom cert files
 rustls-pemfile = "2.0"
 rustls-pki-types = "1.0"
