--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions-rs/toolchain@v1
       with:
-        toolchain: "1.67"
+        toolchain: "1.72"
         override: true
+    - run: cargo build --no-default-features
     - run: cargo build --all-features
