--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,3 +80,31 @@ members = [
     "tests-integration/rust-client",
     "tests-integration/test-server"
 ]
+
+[[example]]
+name = "server"
+required-features = ["server-api"]
+
+[[example]]
+name = "secure_server"
+required-features = ["server-api"]
+
+[[example]]
+name = "bench"
+required-features = ["server-api"]
+
+[[example]]
+name = "gluesql"
+required-features = ["server-api"]
+
+[[example]]
+name = "sqlite"
+required-features = ["server-api"]
+
+[[example]]
+name = "duckdb"
+required-features = ["server-api"]
+
+[[example]]
+name = "scram"
+required-features = ["server-api"]
