--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,10 +51,14 @@ jobs:
       with:
         toolchain: ${{ matrix.rust }}
         override: true
-    - name: Build and run tests
-      run: cargo test --all-features
+    - name: Build and run tests on default feature set
+      run: cargo test
     - name: Run tests on minimal feature set
       run: cargo test --no-default-features
+    - name: Run tests on additional scram+ring feature set
+      run: cargo test --features server-api-scram-ring
+    - name: Run tests on additional scram+aws-lc-rs feature set
+      run: cargo test --features server-api-scram-aws-lc-rs
 
   integration:
     name: Integration tests
