--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,9 +44,7 @@ postgres-types = { version = "0.2", features = [
 chrono = { version = "0.4", features = ["std"], optional = true }
 
 [features]
-default = ["server-api-ring"]
-server-api-ring = ["server-api", "ring"]
-server-api-aws-lc-rs = ["server-api", "aws-lc-rs"]
+default = ["server-api-aws-lc-rs"]
 ring = ["dep:ring", "tokio-rustls/ring"]
 aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs"]
 server-api = [
@@ -58,12 +56,12 @@ server-api = [
     "dep:rand",
     "dep:md5",
     "dep:hex",
-    "dep:base64",
-    "dep:stringprep",
-    "dep:x509-certificate",
     "dep:postgres-types",
     "dep:chrono",
 ]
+server-api-ring = ["server-api", "ring"]
+server-api-aws-lc-rs = ["server-api", "aws-lc-rs"]
+scram = ["dep:base64", "dep:stringprep", "dep:x509-certificate"]
 
 [dev-dependencies]
 tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros"]}
@@ -111,4 +109,4 @@ required-features = ["server-api"]
 
 [[example]]
 name = "scram"
-required-features = ["server-api"]
+required-features = ["scram"]
