chore: add required features for copy example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,5 +108,9 @@ name = "duckdb"
 required-features = ["server-api"]
 
 [[example]]
+name = "copy"
+required-features = ["server-api"]
+
+[[example]]
 name = "scram"
 required-features = ["scram"]
