test: add tests for direct ssl

--- a/tests-integration/rust-client/Cargo.toml
+++ b/tests-integration/rust-client/Cargo.toml
@@ -8,4 +8,6 @@ publish = false
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-postgres = { version = "0.19" }
+openssl = "0.10"
+postgres = { git = "https://github.com/sunng87/rust-postgres.git", rev = "629991beed1e689bd8ec79e1fd83aed03d049eef"  }
+postgres-openssl = { git = "https://github.com/sunng87/rust-postgres.git", rev = "629991beed1e689bd8ec79e1fd83aed03d049eef" }
