--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ _duckdb = []
 tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros"]}
 rusqlite = { version = "0.31.0", features = ["bundled", "column_decltype"] }
 ## for duckdb example
-duckdb = { version = "1.0.0" }
+duckdb = { version = "1.0.0", features = ["bundled"] }
 
 ## for loading custom cert files
 rustls-pemfile = "2.0"
