feat: track transaction state (#200)
* feat: track transaction state

* docs: update readme

* refactor: reimplement transaction status

* refactor: noop startup handler

* test: add a transaction example

* fix: example

* chore: set msrv to 1.74

* doc: update doc string for response

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ homepage = "https://github.com/sunng87/pgwire"
 repository = "https://github.com/sunng87/pgwire"
 documentation = "https://docs.rs/crate/pgwire/"
 readme = "README.md"
-rust-version = "1.72"
+rust-version = "1.74"
 
 [dependencies]
 derive-new = "0.7"
@@ -120,3 +120,7 @@ required-features = ["server-api"]
 [[example]]
 name = "scram"
 required-features = ["scram"]
+
+[[example]]
+name = "transaction"
+required-features = ["server-api"]
