test: add a streaming response example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ _sqlite = []
 _bundled = ["duckdb/bundled", "rusqlite/bundled"]
 
 [dev-dependencies]
-tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros"]}
+tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros", "time"]}
 rusqlite = { version = "0.32.1", features = ["column_decltype"] }
 ## for duckdb example
 duckdb = { version = "1.0.0" }
