--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,16 @@ jobs:
         toolchain: nightly
         components: clippy
         override: true
-    - name: Lint
-      run: cargo clippy --all-features -- -D warnings
+    - name: Lint default
+      run: cargo clippy -- -D warnings
+    - name: Lint minimal
+      run: cargo clippy --no-default-features -- -D warnings
+    - name: Lint server-api without tls
+      run: cargo clippy --no-default-features --features server-api -- -D warnings
+    - name: Lint ring
+      run: cargo clippy --no-default-features --features server-api-ring -- -D warnings
+    - name: Lint scram
+      run: cargo clippy --features scram -- -D warnings
 
   test:
     name: Test
@@ -55,8 +63,10 @@ jobs:
       run: cargo test
     - name: Run tests on minimal feature set
       run: cargo test --no-default-features
+    - name: Run tests without tls
+      run: cargo test --no-default-features --features server-api
     - name: Run tests on additional scram+ring feature set
-      run: cargo test --features server-api-ring,scram
+      run: cargo test --no-default-features --features server-api-ring,scram
     - name: Run tests on additional scram+aws-lc-rs feature set
       run: cargo test --features scram
     - name: Run check on duckdb and sqlite example
@@ -90,5 +100,8 @@ jobs:
       with:
         toolchain: "1.74"
         override: true
+    - run: cargo build
     - run: cargo build --no-default-features
-    - run: cargo build --all-features
+    - run: cargo build --no-default-features --features server-api
+    - run: cargo build --no-default-features --features server-api-ring
+    - run: cargo build --features scram
