--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,12 +47,11 @@ lazy-regex = {version = "3.3", default-features = false, features = ["lite"]}
 
 [features]
 default = ["server-api-aws-lc-rs"]
-ring = ["dep:ring", "tokio-rustls/ring"]
-aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs"]
+_ring = ["dep:ring", "tokio-rustls/ring"]
+_aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs"]
 server-api = [
     "dep:tokio",
     "dep:tokio-util",
-    "dep:tokio-rustls",
     "dep:futures",
     "dep:async-trait",
     "dep:rand",
@@ -62,8 +61,8 @@ server-api = [
     "dep:chrono",
     "dep:rust_decimal",
 ]
-server-api-ring = ["server-api", "ring"]
-server-api-aws-lc-rs = ["server-api", "aws-lc-rs"]
+server-api-ring = ["server-api", "_ring"]
+server-api-aws-lc-rs = ["server-api", "_aws-lc-rs"]
 scram = ["dep:base64", "dep:stringprep", "dep:x509-certificate"]
 _duckdb = []
 _sqlite = []
@@ -91,36 +90,36 @@ members = [
 
 [[example]]
 name = "server"
-required-features = ["server-api"]
+required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "secure_server"
-required-features = ["server-api"]
+required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "bench"
-required-features = ["server-api"]
+required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "gluesql"
-required-features = ["server-api"]
+required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "sqlite"
-required-features = ["server-api", "_sqlite"]
+required-features = ["server-api-aws-lc-rs", "_sqlite"]
 
 [[example]]
 name = "duckdb"
-required-features = ["server-api", "_duckdb"]
+required-features = ["server-api-aws-lc-rs", "_duckdb"]
 
 [[example]]
 name = "copy"
-required-features = ["server-api"]
+required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "scram"
-required-features = ["scram"]
+required-features = ["server-api-aws-lc-rs", "scram"]
 
 [[example]]
 name = "transaction"
-required-features = ["server-api"]
+required-features = ["server-api-aws-lc-rs"]
