--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,9 +44,11 @@ postgres-types = { version = "0.2", features = [
 chrono = { version = "0.4", features = ["std"], optional = true }
 rust_decimal = { version = "1.35", features = ["db-postgres"], optional = true }
 lazy-regex = {version = "3.3", default-features = false, features = ["lite"]}
+## config
+percent-encoding = { version = "2.0", optional = true }
 
 [features]
-default = ["server-api-aws-lc-rs"]
+default = ["server-api-aws-lc-rs", "client-api"]
 _ring = ["dep:ring", "tokio-rustls/ring"]
 _aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs"]
 server-api = [
@@ -64,6 +66,7 @@ server-api = [
 server-api-ring = ["server-api", "_ring"]
 server-api-aws-lc-rs = ["server-api", "_aws-lc-rs"]
 scram = ["dep:base64", "dep:stringprep", "dep:x509-certificate"]
+client-api = ["dep:percent-encoding"]
 _duckdb = []
 _sqlite = []
 _bundled = ["duckdb/bundled", "rusqlite/bundled"]
