--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
 tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["logging", "tls12"]}
 futures = { version = "0.3", optional = true }
 async-trait = { version = "0.1", optional = true }
+pin-project = { version = "1.1", optional = true }
 rand = { version = "0.8", optional = true }
 md5 = { version = "0.7", optional = true }
 hex = { version = "0.4", optional = true }
@@ -56,6 +57,7 @@ server-api = [
     "dep:tokio-util",
     "dep:futures",
     "dep:async-trait",
+    "dep:pin-project",
     "dep:rand",
     "dep:md5",
     "dep:hex",
