--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,15 +50,14 @@ lazy-regex = {version = "3.3", default-features = false, features = ["lite"]}
 percent-encoding = { version = "2.0", optional = true }
 
 [features]
-default = ["server-api-aws-lc-rs", "client-api"]
-_ring = ["dep:ring", "tokio-rustls/ring", "dep:rustls-pki-types"]
-_aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs", "dep:rustls-pki-types"]
+default = ["server-api-aws-lc-rs"]
+_ring = ["dep:ring", "tokio-rustls/ring"]
+_aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs"]
 server-api = [
     "dep:tokio",
     "dep:tokio-util",
     "dep:futures",
     "dep:async-trait",
-    "dep:pin-project",
     "dep:rand",
     "dep:md5",
     "dep:hex",
@@ -68,8 +67,17 @@ server-api = [
 ]
 server-api-ring = ["server-api", "_ring"]
 server-api-aws-lc-rs = ["server-api", "_aws-lc-rs"]
+client-api = [
+  "dep:percent-encoding",
+  "dep:pin-project",
+  "dep:tokio",
+  "dep:tokio-util",
+  "dep:futures",
+  "dep:async-trait",
+]
+client-api-ring = ["client-api", "_ring", "dep:rustls-pki-types"]
+client-api-aws-lc-rs = ["client-api", "_aws-lc-rs", "dep:rustls-pki-types"]
 scram = ["dep:base64", "dep:stringprep", "dep:x509-certificate"]
-client-api = ["dep:percent-encoding"]
 _duckdb = []
 _sqlite = []
 _bundled = ["duckdb/bundled", "rusqlite/bundled"]
