feat: implement client loop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { version = "1.19", features = [
     "net",
     "rt",
     "io-util",
+    "macros"
 ], optional = true }
 tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = true }
 tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["logging", "tls12"]}
