--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,7 +89,7 @@ tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros", "tim
 rustls-pki-types = { version = "1.10" }
 rusqlite = { version = "0.36.0", features = ["column_decltype"] }
 ## for duckdb example
-duckdb = { version = "1.0.0" }
+duckdb = { version = "1", features = ["bundled"] }
 
 ## for loading custom cert files
 rustls-pemfile = "2.0"
