--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ lazy-regex = {version = "3.3", default-features = false, features = ["lite"]}
 percent-encoding = { version = "2.0", optional = true }
 
 [features]
-default = ["server-api-aws-lc-rs"]
+default = ["server-api"]
 _ring = ["dep:ring", "tokio-rustls/ring", "dep:rustls-pki-types"]
 _aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs", "dep:rustls-pki-types"]
 server-api = [
@@ -114,7 +114,7 @@ members = [
 
 [[example]]
 name = "server"
-required-features = ["server-api-aws-lc-rs"]
+required-features = ["server-api"]
 
 [[example]]
 name = "secure_server"
