chore(server): #298 completed keycloak auth example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,7 +105,15 @@ pg-type-rust-decimal = ["dep:rust_decimal"]
 pg-type-serde-json = ["dep:serde", "dep:serde_json", "postgres-types/with-serde_json-1"]
 _sqlite = []
 _bundled = ["rusqlite/bundled"]
-keycloak-oauth-validator = ["dep:jsonwebtoken", "dep:rsa", "dep:reqwest", "dep:base64"]
+keycloak-oauth-validator = [
+"server-api",
+"dep:jsonwebtoken",
+"dep:rsa",
+"dep:reqwest",
+"dep:base64",
+"dep:serde",
+"dep:serde_json",
+]
 
 [dev-dependencies]
 chrono-tz = "0.10"
@@ -170,7 +178,7 @@ required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "keycloak_oauth"
-required-features = ["server-api-aws-lc-rs", "keycloak-oauth-validator"]
+required-features = ["keycloak-oauth-validator"]
 
 [[example]]
 name = "transaction"
